<resources>
    <string name="app_name">Popular Movies v2.0</string>
    <string name="primary_poster_path">http://image.tmdb.org/t/p/w500/</string>
    <string name="no_connectivity_error_with_refresh_button">Error, No Internet Connectivity Detected Please Reconnect and Click Refresh Button</string>
    <string name="no_connectivity_error">Error, No Internet Connectivity Detected Please Check Your Network Connection</string>
    <string name="popular_movie_title">Popular Movies</string>
    <string name="top_rated_movies_title">Top Rated Movies</string>
    <string name="favorites_movie_title">Favorites Movies</string>
    <string name="vote_of_ten"> of 10</string>
    <string name="release_date_tv">Release Date</string>
    <string name="plot_tv">Movie Plot</string>
    <string name="vote_average_tv">Vote Average</string>
    <string name="sort_menu">Sort By:</string>
    <string name="top_rate_menu">Top Rated</string>
    <string name="most_popular_menu">Popularity</string>
    <string name="refresh_button">Refresh</string>
    <string name="poster_iv_description">ImageView holds movie poster image</string>
    <string name="splash_iv_description">ImageView holds the image of the app launcher</string>
    <string name="review_iv_description">ImageView that gives the look and feel of independency of every author in the review section</string>
    <string name="trailer_play_button_ib">ImageButton that let the user to play the selected trailer in Youtube</string>
    <string name="KEY_RESULTS">results</string>
    <string name="KEY_MOVIE_ID">id</string>
    <string name="KEY_POSTER_PATH">poster_path</string>
    <string name="KEY_TITLE">original_title</string>
    <string name="KEY_RELEASE_DATE">release_date</string>
    <string name="KEY_RATE">vote_average</string>
    <string name="KEY_PLOT">overview</string>
    <string name="KEY_TRAILER_NAME">name</string>
    <string name="KEY_TRAILER_KEY">key</string>
    <string name="KEY_REVIEW_AUTHOR">author</string>
    <string name="KEY_REVIEW_CONTENT">content</string>
    <string name="RETRIEVING_TRAILERS">RETRIEVING MOVIE TRAILERS …</string>
    <string name="RETRIEVING_REVIEWS">Retrieving Reviews Data …</string>
    <string name="review_button">Show Reviews</string>
    <string name="no_movies_liked">NO MOVIES LIKED</string>
    <string name="review_content_test">Well, one off from two of this year\'s most expected movies alongside \'The Battle of Five Armies\'. Like all the Chris Nolan fans, I was equally excited to see the movie on the opening day opening show. But I slightly disappointed that it was not a digital 3D film. I agree, this science-fiction was more dramatized than usual space travel stories does with an adventure-thriller. Almost a 3 hour long stretch movie did not waste much time to take us to the core of the story. Get prepared for this extremely rare voyage into the space with a logical explanation for everything you see on the screen. Well done research for the most matured and intelligent writing. All the credit must go to Nolan brothers. A good sign from Jonathan Nolan, who can make big in the entertainment industry in a future like his brother. As we know many had liked \'Inception', to me that was a simple multi-layered action movie, that's all. But the same stuffs that used in this film makes sense. In fact, you have to have a little knowledge over how the universe works, so then it will be easy to catch the scene and situations while watching the movie."</string>
    <string name="review_author_test">John Knight</string>
    <string name="trailer_name_test_tv">Official Trailers #1</string>
    <string name="no_trailers_error">NO MOVIE TRAILERS ASSOCIATED WITH THIS MOVIE</string>
    <string name="no_reviews_error">No One Has Reviewed This Movie Yet!</string>
    <string name="movie_trailer_tv">MOVIE TRAILERS</string>
</resources>
