<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbarThumbVertical="@color/red_button"
    android:scrollbarSize="1dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.knightrider.popularmoviesstage1.DetailedMovieActivity">

        <ImageView
            android:id="@+id/moviePoster_iv"
            android:layout_width="140dp"
            android:layout_height="205dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/poster_iv_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle_tv" />

        <TextView
            android:id="@+id/movieTitle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Movie Title Here" />

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/release_date_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moviePoster_iv" />

        <TextView
            android:id="@+id/releaseDate_tv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.151"
            app:layout_constraintStart_toEndOf="@+id/releaseDate"
            app:layout_constraintTop_toBottomOf="@+id/moviePoster_iv"
            tools:text="2017-12-12" />

        <TextView
            android:id="@+id/plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/plot_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.031"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vote" />

        <TextView
            android:id="@+id/plot_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plot"
            tools:text="Here all the plot of the Movie will go, blah blah blah" />

        <ProgressBar
            android:id="@+id/progressBar_iv"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="76dp"
            app:layout_constraintBottom_toBottomOf="@+id/moviePoster_iv"
            app:layout_constraintEnd_toEndOf="@+id/moviePoster_iv"
            app:layout_constraintHorizontal_bias="0.447"
            app:layout_constraintStart_toStartOf="@+id/moviePoster_iv"
            app:layout_constraintTop_toTopOf="@+id/moviePoster_iv"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/vote_average_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/releaseDate" />

        <TextView
            android:id="@+id/vote_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/plot_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.137"
            app:layout_constraintStart_toEndOf="@+id/vote"
            app:layout_constraintTop_toBottomOf="@+id/releaseDate_tv"
            app:layout_constraintVertical_bias="0.06"
            tools:text="5.5 of 10" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/movieTrailers">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/movieTrailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/RETRIEVING_TRAILERS"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.037"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plot_tv" />

        <Button
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/review_button"
            android:background="@color/red_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/releaseDate_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toEndOf="@+id/moviePoster_iv"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingFavButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:tag="unfavorited"
            app:layout_constraintBottom_toTopOf="@+id/reviews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/moviePoster_iv"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle_tv"
            app:srcCompat="@drawable/btn_star_big_off"
            android:focusable="true" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
